--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
 
     <title>Portfolio</title>
 
-<!--    <link href="https://fonts.googleapis.com/css2?family=Antic&display=swap" rel="stylesheet">-->
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/jack.css">
-<!--    <link rel="stylesheet" href="css/main.css">-->
-<!--    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>-->
-<!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
+    <link rel="stylesheet" href="css/styles.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -81,19 +78,6 @@
                     </h1>
                  </div>
              </div>
-
-            <div class="row">
-                <div class="col-md-12 hero-text">
-<!--                    <h1>Here's a brief overview of-->
-<!--                        <span-->
-<!--                                class="txt-rotate"-->
-<!--                                data-period="1000"-->
-<!--                                data-rotate='[ "me.", "my projects.", "my hobbies."]'>-->
-<!--                        </span>-->
-<!--                    </h1>-->
-<!--                    <h1>Here's a brief overview of me and my work</h1>-->
-                </div>
-            </div>
             <div class="row scroll_down fixed-bottom">
                 <div class="col-md-12" id="scroll_down">
                     <section id="section07" class="demo">
@@ -205,18 +189,6 @@
                         open source project called <a href="https://github.com/ISISScientificComputing/autoreduce">Autoreduction</a>
                         as part of the <a href="https://www.ukri.org/">UK Research and Innovations</a>, <a href="https://stfc.ukri.org/">Science and Technology
                             Facilities Councils</a> <a href="https://www.isis.stfc.ac.uk/Pages/home.aspx">ISIS Neutron and Muon Source</a></p>
-                    <h3>Line Manager Comments</h3>
-                    <p>
-                        "Jack has had a good year at ISIS and has been a great help to the progression of the Autoreduction project. He has proven himself capable in both software development and user support tasks.
-                        <br>
-                        In the earlier half of Jacks year with us, he helped to identify areas for improvement within the project and work independently to implement new technologies. Furthermore, Jack has shown a keen interest in the science and domain space around the project expressing desire to learn more about the work carried out at the lab. Jack has gone on to demonstrate this knowledge by giving a guided tour of the ISIS instrument halls to A-Level students.
-                        <br>
-                        More recently Jack has been involved with the monitoring and visualisation aspects of the project. Here again, he has shown good software engineering skills to implement these aspects of the system.
-                        <br>
-                        Jack has shown good aptitude for code quality and ensuring software engineering principals such as DRY (do not repeat yourself). Something to consider going forward is to strive for a balance between these principals and design simplicity. It is always best to reduce code duplication where possible, however it is important to consider the implications this has on readability and complexity.
-                        <br>
-                        Overall, Jack has been an asset to the team both technically and socially and I have been very pleased with his achievements in the Autoreduction project this year. I would like to thank Jack for his input and effort on the project this year." - Elliot Oram
-                    </p>
                     <div class="project_container">
                         <div id="carouselDarkControls" class="carousel slide" data-ride="carousel" data-interval="5000">
                             <ol class="carousel-indicators">
