Minor grammar amendments

--- a/index.html
+++ b/index.html
@@ -93,18 +93,18 @@
                 <div class="col-md-6 interests">
                     <h3>A Little Bit About Me</h3>
                     <p>
-                       My names is Jack, and I'm currently completing my final year at Coventry university in Computer Science BSc (Hons)
+                       Hi! My name's Jack. I'm currently completing my final year at Coventry University with the aim of accomplishing a 1st in Computer Science BSc (Hons)
                     </p>
                     <p>
                         Since completing a year long placement at the STFC ISIS Neutron and Muon Source, my passion for
-                        science has skyrocketed, changing my entire outlook on the type of software developer i would like to become.
+                        science has skyrocketed, changing my entire outlook on the type of software developer I would like to become.
                     </p>
                 </div>
                  <div class="col-md-6 interests">
                      <h3>STEM</h3>
                     <p>
                         A topic I am becoming increasingly interested in is public engagement.
-                        Whenever possible, i take pride in participating in STEM Outreach events to share my enthusiasm with the general public,
+                        Whenever possible, I take pride in participating in STEM outreach events to share my enthusiasm with the general public,
                         hopefully even inspiring the next generation to work in this amazing field!
                         <br>
                         I am currently trying to adapt one of my projects which you can see below into a STEM activity which I hope to present at schools.
@@ -115,7 +115,7 @@
                     <p>
                         I strongly believe in maintaining a healthy work life balance. In order to do this, I fill my week with a number of hobbies.
                         <br>
-                        Not only do I listen to rock, i also climb them and go under them!
+                        Not only do I listen to rock, I also climb them and go under them!
                     </p>
 
                 </div>
@@ -123,7 +123,7 @@
                     <h4>Rock Climbing</h4>
                     <p>
                         One of my most beloved hobbies is rock climbing, this is something I enjoy doing both with and without friends.
-                        I believe part of the reason behind why i enjoy rock climbing is because not only is it beneficial to my fitness, but also my brain.
+                        I believe part of the reason behind why I enjoy rock climbing is because not only is it beneficial to my fitness, but also my brain.
                         <br>
                         In order to climb efficiently,
                         I need to first find the best route from the bottom to the top. When doing this, I must take into consideration the following points:
@@ -150,7 +150,7 @@
                     <p>
                         When i'm not climbing rocks or venturing underneath them, I am listening to them.
                         <br>
-                        A long, long, long time ago, back to a time when the word Covid19 was unheard of, i often went to live concerts and music festivals such as Slam Dunk and Download.
+                        A long, long, long time ago, back to a time when the word Covid19 was unheard of, I often went to live concerts and music festivals such as Slam Dunk and Download.
                         <br>
                         My favourite genres are classic rock, punk rock, pop punk and grunge.
                     </p>
@@ -167,7 +167,7 @@
 
                     <p> This project is being developed primarily for IMAT, a scientific instrument within ISIS,
                         but could be utilised by other instruments within ISIS later on.
-                        My work will eventually make its way into The Mantid Project within the Mantid Imaging repository.</p>
+                        My work will eventually make its way into The <a href="https://www.mantidproject.org/Main_Page" target="_blank">Mantid Project</a> within the <a href="https://github.com/mantidproject/mantidimaging" target="_blank">Mantid Imaging repository</a>.</p>
                     <div class="project_container">
                         <img alt="tomography imaging" src="images/IMAT_1.png">
                     </div>
@@ -186,9 +186,14 @@
                 <div class="col-md-12 project-2">
                     <h2>Autoreduction</h2>
                     <p>I have spent just over a year on placement between 2019-2020 primarily working on an
-                        open source project called <a href="https://github.com/ISISScientificComputing/autoreduce">Autoreduction</a>
-                        as part of the <a href="https://www.ukri.org/">UK Research and Innovations</a>, <a href="https://stfc.ukri.org/">Science and Technology
-                            Facilities Councils</a> <a href="https://www.isis.stfc.ac.uk/Pages/home.aspx">ISIS Neutron and Muon Source</a></p>
+                        open source project called <a href="https://github.com/ISISScientificComputing/autoreduce" target="_blank">Autoreduction</a>
+                        as part of the <a href="https://www.ukri.org/" target="_blank">UK Research and Innovations</a>, <a href="https://stfc.ukri.org/" target="_blank">Science and Technology
+                            Facilities Councils</a> <a href="https://www.isis.stfc.ac.uk/Pages/home.aspx" target="_blank">ISIS Neutron and Muon Source</a></p>
+                    <p>
+                        The primary task carried out by the Autoreduction project is to gather data from the ISIS datastore
+                        via polling, and then use Mantid and user scripts to reduce data and store in a Ceph storage cluster.
+                        The secondary purpose is basic visualisation for on the fly analysis.
+                    </p>
                     <div class="project_container">
                         <div id="carouselDarkControls" class="carousel slide" data-ride="carousel" data-interval="5000">
                             <ol class="carousel-indicators">
@@ -231,7 +236,7 @@
                         first developing a basic prototype which can be seen below at Coventry University.
                         (Sorry for the straight face, I only used a frontal face classification for my first test so I needed to hold a constant facial expression)</p>
                     <p>The example below uses the DJI Tello drone as a platform and a tuned
-                        <a href="https://docs.opencv.org/3.4/db/d28/tutorial_cascade_classifier.html">Haar Cascade classifier</a>
+                        <a href="https://docs.opencv.org/3.4/db/d28/tutorial_cascade_classifier.html" target="_blank">Haar Cascade classifier</a>
                         trained with custom data collected, cleaned and separated into test and training sets as part of a data
                         collection and cleaning pipeline I constructed.</p>
                     <div class="project_container">
@@ -239,8 +244,8 @@
                             <source src="videos/drone_test-1.mp4" type="video/mp4">
                         </video>
                     </div>
-                     <p>I have since moved to a more practical platform using the <a href="https://www.bitcraze.io/products/old-products/crazyflie-2-0/">Crazyflie drone</a>
-                         which has more capable hardware for use with the <a href="https://github.com/pjreddie/darknet">YOLO V4 classifier</a>.</p>
+                     <p>I have since moved to a more practical platform using the <a href="https://www.bitcraze.io/products/old-products/crazyflie-2-0/" target="_blank">Crazyflie drone</a>
+                         which has more capable hardware for use with the <a href="https://github.com/pjreddie/darknet" target="_blank">YOLO V4 classifier</a>.</p>
                     <p>This project focuses on creating a swarm of drones to autonomously navigate a building, identifying objects of interest
                         and pinning there locations to a 3D blueprint constructed by the drones when navigating the building to a dashboard.</p>
                         <p>The swarm of drones act as their own mesh network to relay information to each other extending
@@ -325,7 +330,7 @@
         <!--Copyright-->
         <p class="text-center text-md-center">© 2020 Copyright:
           <a href="https://github.com/JackEAllen">
-            <strong>https://JackEAllen.github.io</strong>
+            <strong>JackEAllen.github.io</strong>
           </a>
         </p>
 
