--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="javascript/app.js"></script> 
+
     <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 </head>
 <body>
-    <div class="container-fluid hero-image banner">
+    <div id="particles-js"></div>
+    <div  class="container-fluid hero-image banner">
         <nav class="navbar navbar-expand-sm navbar-dark col-sm-pull-12">
             <div class="navbar-collapse collapse justify-content-sm-center" id="collapsingNavbar">
                 <ul class="navbar-nav">
@@ -31,6 +33,7 @@
                 </ul>
             </div>
         </nav>
+        
         <div class="container header-banner">
             <div class="row  justify-content-sm-center">
                 <div class="col-sm-3">
@@ -344,5 +347,6 @@
   <!-- Footer Links -->
 
 </footer>
+<script src="javascript/snow.js"></script> 
 <!-- Footer -->
 </html>
