--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="javascript/app.js"></script> 
 
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+<!--     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>  SNOW --> 
 </head>
 <body>
     <div id="particles-js"></div>
