--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
                 <div class="col-md-6 interests">
                     <h3>A Little Bit About Me</h3>
                     <p>
-                       Hi! My name's Jack. I'm currently completing my final year at Coventry University with the aim of accomplishing a 1st in Computer Science BSc (Hons)
+                       Hi! My name's Jack. I'm currently working as a Graduate Controls Software Engineer, working on a project called IBEX at the <a href="isis.stfc.ac.uk/Pages/home.aspx" target="_blank">ISIS Neutron and Muon Source</a>. 
                     </p>
                     <p>
-                        Since completing a year long placement at the STFC ISIS Neutron and Muon Source, my passion for
-                        science has skyrocketed, changing my entire outlook on the type of software developer I would like to become.
+                        Since completing a year long placement at the STFC ISIS Neutron and Muon Source as part of my Computer Science BSc, my passion for
+                        science has skyrocketed, changing my entire outlook on the type of software development I decided to pursue.
                     </p>
                 </div>
                  <div class="col-md-6 interests">
@@ -152,7 +152,7 @@
 
                     <h4>Rock Music</h4>
                     <p>
-                        When i'm not climbing rocks or venturing underneath them, I am listening to them.
+                        When I'm not climbing rocks or venturing underneath them, I am listening to them.
                         <br>
                         A long, long, long time ago, back to a time when the word Covid19 was unheard of, I often went to live concerts and music festivals such as Slam Dunk and Download.
                         <br>
